jenkins/05-jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins-server
  ports:
    - name: http
      port: 8080
    - name: jnl
      port: 50000
